Enable Delete Employee feature